# docs/swagger.json
@@ -20,7 +20,7 @@
     "paths": {
         "/api/v1/admin/login": {
             "post": {
-                "description": "Create a new account",
+                "description": "Create a new login",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,12 +28,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "Login"
                 ],
-                "summary": "Create account",
+                "summary": "Create login",
                 "parameters": [
                     {
-                        "description": "Create news",
+                        "description": "Login",
                         "name": "request",
                         "in": "body",
                         "required": true,
